# IDATT2503

game-master/: main.cpp
task1/: CMakeLists.txt  a.cpp  b.cpp  list
task2/: CMakeLists.txt  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp
task3/: CMakeLists.txt  main1and2.cpp  main4.cpp
task3/oppg3/: Commodity.cpp  Commodity.h  main3.cpp
task4/: CMakeLists.txt  main1.cpp  main2.cpp
task5/: CMakeLists.txt  main.cpp
task6/: CMakeLists.txt  main1.cpp  main2.cpp
task7/: CMakeLists.txt
task7/oppg1/: fraction.cpp  fraction.h  main1.cpp
task7/oppg2/: main2.cpp
task8/: CMakeLists.txt  main1.cpp  main2.cpp
task9/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
