cmake_minimum_required(VERSION 3.28)
project(task2)

set(CMAKE_CXX_STANDARD 17)

add_executable(main1 main1.cpp
        main2.cpp
        main3.cpp)
add_executable(main2 main2.cpp)
add_executable(main3 main3.cpp)
add_executable(main4 main4.cpp)
add_executable(main5 main5.cpp)
add_executable(main6 main6.cpp)